# gerberview

./: .commitlintrc.json  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  eslint.config.js  package.json  pnpm-lock.yaml  rustfmt.toml  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/web/: eslint.config.js  index.html  (+4 more)
crates/gerberview-wasm/: Cargo.toml
crates/gerberview-wasm/benches/: parse_bench.rs
crates/gerberview-wasm/src/: error.rs  lib.rs
crates/gerberview-wasm/src/excellon/: mod.rs  parser.rs  types.rs
crates/gerberview-wasm/src/geometry/: aperture.rs  arc.rs  macro_eval.rs  mod.rs  polarity.rs  region.rs  step_repeat.rs  stroke.rs  types.rs
crates/gerberview-wasm/tests/: excellon_test.rs  geometry_test.rs  parse_test.rs
crates/gerberview-wasm/tests/fixtures/arduino-uno/: arduino-uno.GBL  arduino-uno.GBO  arduino-uno.GBS  arduino-uno.GKO  arduino-uno.GTL  arduino-uno.GTO  arduino-uno.GTS  arduino-uno.drl
crates/gerberview-wasm/tests/fixtures/eagle-sample/: board.bor  board.cmp  board.drl  board.plc  board.pls  board.sol  board.stc  board.sts
crates/gerberview-wasm/tests/fixtures/kicad-sample/: board-B_Cu.gbr  board-B_Mask.gbr  board-B_SilkS.gbr  board-Edge_Cuts.gbr  board-F_Cu.gbr  board-F_Mask.gbr  board-F_SilkS.gbr  board.drl
crates/gerberview-wasm/tests/fixtures/minimal/: arc.gbr  circle.gbr  drill.drl  malformed.gbr  polarity.gbr  rectangle.gbr  region.gbr  traces.gbr
docs/: gerber-viewer-agent-brief.md  gerber-viewer-architecture.md  gerber-viewer-feasibility.md  gerber-viewer-spec.md  gerber-viewer-tasks.md
(+36 files in other folders)
