[package]
name = "gerberview-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
gerber_parser = "0.4"
gerber-types = "0.7"
earclip = "1.8"
thiserror = "2"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
